--- a/resources/app/templates/index.html.hbs
+++ b/resources/app/templates/index.html.hbs
@@ -1,4 +1,8 @@
-{{> header }}
+---
+title: Help an institution wisely
+---
+
+{{#> layout }}
 
 <div class="row">
   <div class="large-12 columns">
@@ -6,4 +10,4 @@
   </div>
 </div>
 
-{{> footer }}
+{{/layout}}
