using react to render dinamically bill list

--- a/resources/app/templates/_layout.hbs
+++ b/resources/app/templates/_layout.hbs
@@ -12,6 +12,8 @@
     {{> @partial-block }}
 
     <script src="scripts/libs.js"></script>
+    <script src="scripts/app.js"></script>
     <script>$(document).foundation();</script>
+    <script>require("views/home").init();</script>
   </body>
 </html>
