#6 #7 adding donate button and its modal to retrive donator's email

--- a/resources/app/templates/_layout.hbs
+++ b/resources/app/templates/_layout.hbs
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Billbo - {{title}}</title>
     <link rel="stylesheet" href="styles/libs.css" />
+    <link rel="stylesheet" href="styles/app.css" />
     <script src="scripts/libs-header.js"></script>
   </head>
   <body>
