--- a/resources/app/templates/index.html.hbs
+++ b/resources/app/templates/index.html.hbs
@@ -13,7 +13,7 @@ title: Ajude uma instituição aonde ela mais precisa
 <section class="row">
   <div class="small-12 medium-4 columns" style="text-align: center">
     <a class="th" href="#">
-      <img src="http://placehold.it/300?text=Logo+Instituição" alt="Logo Instituição" />
+      <img src="images/logo.jpg" alt="Logo Instituição" />
     </a>
   </div>
   <div class="small-12 medium-8 columns">
